Fix icon alignment
ERM20227

[4.x]

--- a/resources/bluespice.socialtopics.css
+++ b/resources/bluespice.socialtopics.css
@@ -1,3 +1,6 @@
 #social-topics-cnt .social-topics-entitylist-newdiscussion li div {
 	text-align: center;
 }
+#social-topics-cnt .social-topics-entitylist-topicsaftercontent.empty-topics li div {
+	text-align: center;
+}
